...

const { Navigator, Screen } = createNativeStackNavigator();

export function AppRoutes() {
  return (
    <Navigator>
      <Screen name="Home" component={Home} options={{ title: 'Minhas Demandas' }} />
      <Screen name="CreateDemand" component={CreateDemand} options={{ title: 'Nova Demanda' }} />
    </Navigator>
  );
}
