appId: com.projetosv.fiscalize
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible:
      id: "login-email"
    timeout: 20000

- tapOn:
    id: "login-email"
- inputText: "cidadao@fiscalize.gov.br"
- tapOn:
    id: "login-password"
- inputText: "senha-incorreta"
- hideKeyboard
- tapOn:
    id: "login-submit"

- extendedWaitUntil:
    visible: "Falha no Login"
    timeout: 10000
- assertVisible: "Credenciais inválidas."
- tapOn: "OK"

- assertVisible:
    id: "login-submit"
- assertNotVisible: "Minhas Demandas"
