appId: com.projetosv.fiscalize
env:
  EMAIL: cidadao@fiscalize.gov.br
  PASSWORD: Cidadao@123456
---
- launchApp:
    clearState: true
    permissions:
      all: allow
- extendedWaitUntil:
    visible:
      id: "login-email"
    timeout: 20000
- tapOn:
    id: "login-email"
- inputText: ${EMAIL}
- tapOn:
    id: "login-password"
- inputText: ${PASSWORD}
- hideKeyboard
- tapOn:
    id: "login-submit"
- extendedWaitUntil:
    visible: "Minhas Demandas"
    timeout: 15000
- extendedWaitUntil:
    visible:
      id: "demand-list"
    timeout: 15000
